2006-03-28 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 1.0.11rc3

2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
	* DETAILS: (automated) Add KEYWORDS

2005-11-18 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to 1.0.10

2004-10-26 Bearcat M. Sandor <Sorcerer@TheDragonsEdge.com>
	* DETAILS: Created
	* HISTORY: Created
