@@ -7,6 +7,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
         WEB_SITE=http://www.alsa-project.org/
          ENTERED=20041026
          UPDATED=20041026
+      PATCHLEVEL=1
       LICENSE[0]=LGPL
        BUILD_API=2
         KEYWORDS="drivers audio"
