@@ -1,0 +1,7 @@
+default_install  &&
+
+# Install config files to set aoss wrapper use
+install -m 0644 $SCRIPT_DIRECTORY/alsa-oss     \
+              $INSTALL_ROOT/etc/sysconfig/     &&
+install -m 0755 $SCRIPT_DIRECTORY/alsa-oss.sh  \
+                 $INSTALL_ROOT/etc/profile.d/
