@@ -1,3 +1,10 @@
+2006-04-18 Juuso Alasuutari <iuso@sourcemage.org>
+	* alsa-oss: Added, sysconfig file with variable to set aoss 
+	  wrapper use for programs which have launch scripts for it
+	* alsa-oss.sh: Added, profile.d file to source above config
+	* INSTALL: Added, install above files
+	* DETAILS: PATCHLEVEL
+
 2006-03-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.11rc3
 
